arreglos en carts y hbs

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,16 +1,25 @@
-<div class="text-center mt-4">
-    <h1>Chat Aplicación Mongo</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+</head>
+<body>
+    <h1>Chat Mongo</h1>
+    
+    <form action="/api/chat" method="post">
+        <label for="user">User:</label>
+        <input type="text" id="user" name="user" required>
+        
+        <br>
 
-<div id="products-container" class="d-flex flex-column" ></div>
+        <label for="message">Message:</label>
+        <input type="text" id="message" name="message" required>
+        
+        <br>
 
-<form id="formulario" class="mt-3">
-    <div class="input-group">
-        <input type="text" class="form-control" id="category" placeholder="Escribe tu mensaje">
-        <div class="input-group-append">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </div>
-    </div>
-</form>
-<script src='/socket.io/socket.io.js'></script>
-<script src="/js/chat.js"></script>
+        <button type="submit">Send Message</button>
+    </form>
+</body>
+</html>
