--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,17 +7,16 @@
 </head>
 <body>
     <h1>Lista de Productos</h1>
-  <ul>
+    <ul>
         {{#each products}}
             <li>
                 <h2>{{this.title}}</h2>
                 <p>{{this.description}}</p>
                 <p>Precio: ${{this.price}}</p>
-                <p>categoria: {{this.category}}</p>
+                <p>Categoría: {{this.category}}</p>
                 <img src="{{this.thumbnails}}" alt="{{this.title}}" width="200">
             </li>
         {{/each}}
     </ul>
-    
 </body>
 </html>
