--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -13,21 +13,34 @@
         {{/each}}
     </ul>
     
-    <form id="addProductForm">
-        <h2>Add new product</h2>
+<form action="/api/products" method="post">
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" required>
+    
+    <br>
 
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
+    <label for="description">Description:</label>
+    <input type="text" id="description" name="description" required>
+    
+    <br>
 
-        <br>
+    <label for="price">Price:</label>
+    <input type="number" id="price" name="price" required>
 
-        <label for="price">Price:</label>
-        <input type="number" id="price" name="price" required>
+    <br>
 
-        <br>
-        
-        <button type="submit">Add product</button>
-    </form>
+    <label for="stock">Stock:</label>
+    <input type="number" id="stock" name="stock" required>
+
+    <br>
+
+    <label for="thumbnails">Thumbnails:</label>
+    <input type="text" id="thumbnails" name="thumbnails" required>
+
+    <br>
+    
+    <button type="submit">Add product</button>
+</form>
 
 </body>
 </html>
